<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.desafioTecnico</groupId>
    <artifactId>desafioTecnico-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <byte-buddy.version>1.15.10</byte-buddy.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>desafioTecnico-domain</module>
        <module>desafioTecnico-application</module>
        <module>desafioTecnico-infra-data</module>
        <module>desafioTecnico-infra-utils</module>
        <module>desafioTecnico-ioc</module>
        <module>desafioTecnico-webui</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.desafioTecnico</groupId>
                <artifactId>desafioTecnico-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.desafioTecnico</groupId>
                <artifactId>desafioTecnico-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.desafioTecnico</groupId>
                <artifactId>desafioTecnico-infra-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.desafioTecnico</groupId>
                <artifactId>desafioTecnico-infra-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.desafioTecnico</groupId>
                <artifactId>desafioTecnico-ioc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.desafioTecnico</groupId>
                <artifactId>desafioTecnico-webui</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
